--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport": "^0.7.0"
   }
 }
